finished all three aligned.  the phone page nav moves too much gotta fix

--- a/css/index.css
+++ b/css/index.css
@@ -92,13 +92,18 @@ h2 {
 p {
 	font-size: 18px;
 }
-.header {
-	display: flex;
+header {
+    display: flex;
+}
+
+header a{
+    width: 50px;
 }
 .container {
-	max-width: 600px;
+	max-width: 1000px;
 	margin: 0 auto;
-	height: 1536px;
+    height: 1536px;
+    padding: 10px;
 }
 .contents {
 	height: 400px;
@@ -138,8 +143,10 @@ p {
 	display: flex;
 }
 .logo {
-	margin-left: 100px;
-	display: flex;
+	margin-left: 40px;
+    display: flex;
+    height: 30px;
+    margin-top: 25px;
 }
 .middle-img {
 	margin-top: 5%;
@@ -171,7 +178,7 @@ footer p {
     font-size: 16px;
 	cursor: pointer;
 	height: 32px;
-	width: 45%;
+	width: 80%;
 	justify-content: center;
 	align-items: center;
 }
@@ -286,7 +293,6 @@ footer p {
         border: 1px solid gray;
         font-size: 30px;
         width: 481px
-        /* border-right: 100px; */
     }
     .btn {
         width: 50%;
